--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@typescript-eslint/parser": "2.34.0",
     "babel-eslint": "10.1.0",
     "common-tags": "1.8.0",
-    "eslint": "7.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-eslint-comments": "3.1.2",
     "eslint-plugin-eslint-plugin": "2.2.1",
@@ -65,14 +64,15 @@
     "lerna-changelog": "1.0.1",
     "markdownlint-cli": "0.23.1",
     "npm-run-all": "4.1.5",
-    "prettier": "2.0.5",
     "semantic-release": "17.0.7",
     "typescript": "3.9.3"
   },
   "dependencies": {
     "@ember-data/rfc395-data": "^0.0.4",
     "ember-rfc176-data": "^0.3.12",
-    "snake-case": "^3.0.3"
+    "snake-case": "^3.0.3",
+    "prettier": "2.0.5",
+    "eslint": "7.0.0"
   },
   "changelog": {
     "repo": "NullVoxPopuli/eslint-plugin-decorator-position",
